<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, GameMaker!</string>
    <string name="app_name">PlatForge</string>
    <string name="newgame">New Game</string>
    <string name="select">Select a map:</string>
    <string name="play">Play</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="actorName">Name:</string>
    <string name="actors">Actors</string>
    <string name="reset">Reset</string>
    <string name="resize">Resize Group</string>
    <string name="ok">Ok</string>
    <string name="actorImage">Image:</string>
    <string name="speed">Speed:</string>
    <string name="editActor">Edit Actor</string>
    <string name="jumpSpeed">Jump Speed</string>
    <string name="cancel">Cancel</string>
    <string name="switchName">Switch Name:</string>
    <string name="defaultValue">Default Value:</string>
    <string name="variableName">Variable Name</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="switchId">Switch Id:</string>
    <string name="events">Events</string>
    <string name="new_">New</string>
    <string name="editEvent">Edit Event</string>
    <string name="triggers">Triggers:</string>
    <string name="actions">Actions:</string>
    <string name="name">Name:</string>
    <string name="newTrigger">New Trigger</string>
    <string name="newAction">New Action</string>
    <string name="eventTriggeredWhen">The event is triggered when:</string>
    <string name="becomes">becomes</string>
    <string name="turns">turns</string>
    <string name="editVariableTrigger">Edit Variable Trigger</string>
    <string name="editSwitchTrigger">Edit Switch Trigger</string>
    <string name="is">is</string>
    <string name="theValue">the value</string>
    <string name="theVariable">the variable</string>
    <string name="editActorTrigger">Edit Actor Trigger</string>
    <string name="specificActor">the specific actor</string>
    <string name="anyActorWithTheClass">any actor with the class</string>
    <string name="editRegionTrigger">Edit Region Trigger</string>
    <string name="anyActor">any actor</string>
    <string name="theHero">the hero</string>
    <string name="theRegion">the region</string>
    <string name="addEvents">Add Event</string>
    <string name="category">Category:</string>
    <string name="objects">Objects</string>
    <string name="addObject">Add Object</string>
    <string name="editObject">Edit Object</string>
    <string name="zoom">Zoom:</string>
    <string name="contacts">Contacts:</string>
    <string name="editUI">Edit User Interface</string>
    <string name="ui">User Interface</string>
    <string name="defaultAction">Default Action</string>
    <string name="editUITrigger">Edit UI Trigger</string>
    <string name="theButton">the Button</string>
    <string name="theJoystick">the Joystick</string>
    <string name="touchesTheScreen">the Screen</string>
    <string name="uiEventTriggered">The event is triggered when:</string>
    <string name="isTapped">is tapped</string>
    <string name="isPressed">is pressed</string>
    <string name="isHeld">is held</string>
    <string name="isReleased">is released</string>
    <string name="isMoved">is dragged</string>
    <string name="anyObject">any object</string>
    <string name="editActorObjectTrigger">Edit Actor/Object Trigger</string>
    <string name="map">Map</string>
    <string name="editBackground">Edit Background</string>
    <string name="sky">Sky</string>
    <string name="ground">Ground</string>
    <string name="decorations">Decorations</string>
    <string name="decorationsUnused">Decorations (unused)</string>
    <string name="preview">Preview:</string>
    <string name="leftArrow">&lt;--</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="editMapSize">Edit Map Size</string>
    <string name="empty"></string>
    <string name="editTileset">Edit Tileset</string>
    <string name="behaviors">Behaviors</string>
    <string name="myBehaviors">My Behaviors</string>
    <string name="type">Type:</string>
    <string name="editBehavior">Edit Behavior</string>
    <string name="variables">Variables:</string>
    <string name="switches">Switches:</string>
    <string name="parameters">Parameters:</string>
    <string name="events_colon">Events:</string>
    <string name="value">Value:</string>
    <string name="startValue">Start Value:</string>
    <string name="switch_">Switch</string>
    <string name="variable">Variable</string>
    <string name="test">Test</string>
    <string name="editHorizon">Edit Horizon</string>
    <string name="editMidground">Edit Midground</string>
    <string name="used">Used:</string>
    <string name="unused">Unused:</string>
    <string name="add">Add</string>
    <string name="editSize">Edit Size</string>
    <string name="dragToScale">Drag to scale:</string>
    <string name="scale">Scale:</string>
    <string name="density">Density:</string>
    <string name="collidesWith">Collides With:</string>
    <string name="hero">Hero</string>
    <string name="theGround">The Ground</string>
    <string name="edit_c">Edit:</string>
    <string name="background">Background</string>
    <string name="midground">Midground</string>
    <string name="size">Size</string>
    <string name="horizon">Horizon</string>
    <string name="tileset">Tileset</string>
    <string name="editBehaviors">Edit Behaviors</string>
    <string name="creatorProfile">Creator Profile</string>
    <string name="username_c">Username:</string>
    <string name="email_c">Email:</string>
    <string name="login">Login</string>
    <string name="games_c">Games:</string>
    <string name="creator_c">Creator:</string>
    <string name="version_c">Version:</string>
    <string name="description_c">Description:</string>
    <string name="dateCreated_c">Date Created:</string>
    <string name="update">Update</string>
    <string name="download">Download</string>
    <string name="publish">Publish Update</string>
    <string name="downloads_c">Downloads:</string>
    <string name="getGames">Get Games</string>
    <string name="uploadNew">Upload a New Game</string>
    <string name="browseGames">Browse Games</string>
    <string name="sort_c">Sort:</string>
    <string name="ratings_c">Ratings:</string>
    <string name="creativity_c">Creativity:</string>
    <string name="creative_c">Creative:</string>
    <string name="impressive_c">Impressive:</string>
    <string name="fun_c">Fun:</string>
    <string name="plusOne">+1</string>
    <string name="rating_c">Rating:</string>
    <string name="physics_c">Pysics:</string>
    <string name="unmoving">Unmoving</string>
    <string name="rotates">Rotates</string>
    <string name="moves">Moves</string>
    <string name="movement_c">Movement:</string>
    <string name="bounciness_c">Bounciness:</string>
    <string name="doubleJump_c">Double Jump:</string>
    <string name="allow">Allow</string>
    <string name="isPlatform_c">Is Platform:</string>
    <string name="platform">Platform</string>
    <string name="gravityDirection_c">Gravity Direction:</string>
    <string name="gravityMagnitude_c">Gravity Magnitude:</string>
    <string name="physics">Physics</string>
    <string name="actor">Actor</string>
    <string name="object">Object</string>
    <string name="to_c">"to: "</string>
    <string name="friction_c">Friction:</string>
    <string name="changeColor">Change Color</string>
    <string name="enableDisable">Enable/Disable</string>
    <string name="welcomeTO">"Welcome to "</string>
    <string name="bang">!</string>
    <string name="mainMenuEditHint">
        It looks like you don\'t have any games of your own. Why don\'t you try creating 
        one with the "New Game" button, or "Branch" a game on the Play tab to edit it 
        yourself.
    </string>
    <string name="mainMenuPlayHint">
        It looks like you haven\'t downloaded any games from other players. Click the 
        "Go Online" button to find some games other folks have made.
    </string>
    <string name="jumpHeight">Jump Height</string>
    <string name="questionMark">\?</string>
    <string name="editPhysics">Edit Physics</string>
</resources>
