<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:orientation="vertical">

    <TextView
        android:id="@+id/textViewPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events"
        android:textAppearance="?android:attr/textAppearanceMedium" >
</TextView>
    <LinearLayout android:id="@+id/linearLayout2" android:orientation="horizontal" android:layout_height="match_parent" android:layout_width="wrap_content">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:choiceMode="singleChoice"
            android:focusable="false"
            android:scrollbars="vertical" >
</ListView>
        <ScrollView android:id="@+id/scrollView1" android:layout_width="wrap_content" android:layout_height="match_parent">
            <LinearLayout android:id="@+id/linearLayoutButtons" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical">
                <Button android:id="@+id/buttonEdit" android:layout_width="170dip" android:layout_height="wrap_content" android:text="@string/edit"/>
                <Button android:id="@+id/buttonReset" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/reset"/>
                <Button android:id="@+id/buttonAdd" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/add"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    
</LinearLayout>
