<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="20dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="20"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <RadioGroup
                    android:id="@+id/radioGroupType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/radioSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dip"
                        android:checked="true"
                        android:text="@string/switch_" />

                    <RadioButton
                        android:id="@+id/radioVariable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/variable" />

                    <RadioButton
                        android:id="@+id/radioActor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actor" />

                    <RadioButton
                        android:id="@+id/radioButtonObject"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/object" />
                </RadioGroup>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>