<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:orientation="vertical">
    <TextView android:text="@string/actors" android:id="@+id/textViewHelp" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content"></TextView>
    <LinearLayout android:id="@+id/linearLayout2" android:orientation="horizontal" android:layout_height="match_parent" android:layout_width="wrap_content">
        <ListView android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_weight="1" android:id="@+id/listViewActors" android:choiceMode="singleChoice" android:focusable="false" android:scrollbars="vertical"></ListView>
        <LinearLayout android:id="@+id/linearLayout3" android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="wrap_content">
            <Button android:text="@string/edit" android:id="@+id/buttonEditActor" android:layout_height="wrap_content" android:layout_width="170dip"></Button>
            <Button android:text="@string/reset" android:id="@+id/buttonResetActor" android:layout_height="wrap_content" android:layout_width="match_parent"></Button>
            <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_width="match_parent">
                <Button android:layout_weight="1" android:text="@string/resize" android:layout_height="wrap_content" android:id="@+id/buttonResizeActors" android:layout_width="match_parent"></Button>
                <EditText android:layout_weight="2" android:layout_height="wrap_content" android:inputType="number" android:layout_width="match_parent" android:id="@+id/editTextResize" android:visibility="gone" android:maxLength="2"></EditText>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    
</LinearLayout>
