<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:text="@string/editSwitchTrigger"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:text="@string/eventTriggeredWhen"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.platforge.editor.maker.SelectorSwitch
                android:id="@+id/selectorSwitch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dip"
                android:text="" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="10dip"
                android:text="@string/turns"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioOn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/on" />

                <RadioButton
                    android:id="@+id/radioOff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/off" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/database_footer" />

</LinearLayout>