<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:text="@string/editRegionTrigger"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:text="@string/eventTriggeredWhen"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/radioGroupType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioAnyActor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/anyActor" />

                <RadioButton
                    android:id="@+id/radioAnyObject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anyObject" />

                <RadioButton
                    android:id="@+id/radioHero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theHero" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <Spinner
                    android:id="@+id/spinnerMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:minWidth="200dip" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:text="@string/theRegion"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.platforge.editor.maker.SelectorRegion
                android:id="@+id/selectorRegion1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/database_footer" />

</LinearLayout>